src/test/deca/library/valid/result/test_divide_member_by_member_output_expected.res
Test Division membre par membre de tableaux 1D
--------------
Tableau1D = [
5 ,5 ,5 ,5 ,5 ,5 ,5 ,]--------------
--------------
Tableau1D = [
6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,]--------------
Le résultat de la division membre par membre est: 
--------------
Tableau1D = [
0 ,0 ,0 ,0 ,0 ,0 ,0 ,]--------------

Test division membre par membre tableau 2D
Division membre par membre entre un tableau de int rempli de 5 et un tableau de float rempli de 6.0
Le résultat de la division membre par membre est: 
--------------
Tableau2D = [
0 ,0 ,0 ,
0 ,0 ,0 ,
0 ,0 ,0 ,
]--------------

Division membre par membre entre un tableau de float rempli de 6.8 et un tableau de int rempli de 5 
--------------
Tableau2D = [
1.36000e+00 ,1.36000e+00 ,1.36000e+00 ,
1.36000e+00 ,1.36000e+00 ,1.36000e+00 ,
1.36000e+00 ,1.36000e+00 ,1.36000e+00 ,
]--------------

Division membre par membre entre un tableau de float rempli de 6.0 et un tableau de float rempli de 10.5
Le résultat de la division membre par membre est: 
--------------
Tableau2D = [
5.71429e-01 ,5.71429e-01 ,5.71429e-01 ,
5.71429e-01 ,5.71429e-01 ,5.71429e-01 ,
5.71429e-01 ,5.71429e-01 ,5.71429e-01 ,
]--------------

Division membre par membre entre un tableau de int rempli de 5 et un tableau de int rempli de 2
Le résultat de la division membre par membre est: 
--------------
Tableau2D = [
2 ,2 ,2 ,
2 ,2 ,2 ,
2 ,2 ,2 ,
]--------------

